# nexuscommerce

./: .dockerignore  .editorconfig  .gitignore  NexusCommerce.slnx  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
deploy/helm/nexuscommerce/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/pipelines/: Jenkinsfile  azure-pipelines.yml
deploy/terraform/: README.md  acr.tf  aks.tf  keyvault.tf  main.tf  outputs.tf  postgres.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/adr/: 0001-microservices-per-bounded-context.md  0002-clean-architecture-catalog-cqrs-orders.md  0003-event-driven-notifications.md  0004-gateway-auth-and-ai-grounding.md  0005-containerization-and-deployment.md
infra/: docker-compose.dev.yml
src/Gateway/Gateway.Api/: Dockerfile  Gateway.Api.csproj  Program.cs  appsettings.json
src/Services/AiSupport/: Dockerfile  pyproject.toml
src/Services/AiSupport/app/: catalog.py  config.py  llm.py  main.py
src/Services/AiSupport/tests/: test_chat.py
src/Services/Notifications/: .dockerignore  Dockerfile  pyproject.toml
src/Services/Notifications/app/: config.py  consumer.py  domain.py  handlers.py  main.py  store.py
src/Services/Notifications/tests/: test_api.py  test_handlers.py
src/Web/admin/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
src/Web/storefront/: Dockerfile  (+4 more)
tests/Catalog.UnitTests/: Catalog.UnitTests.csproj
tests/Gateway.UnitTests/: Gateway.UnitTests.csproj  GatewayAuthTests.cs
tests/Orders.UnitTests/: Orders.UnitTests.csproj
(+93 files in other folders)
