[project]
name = "nexuscommerce-aisupport"
version = "0.1.0"
description = "NexusCommerce AI Support service - product Q&A chatbot grounded in catalog data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.60",
    "truststore>=0.9",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
